--- a/laptopdata-analysis/package.json
+++ b/laptopdata-analysis/package.json
@@ -16,7 +16,8 @@
     "flowbite": "^1.6.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.9.0"
+    "react-icons": "^4.9.0",
+    "zustand": "^4.3.8"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
